Update event date to Nov 13 across all pages and add date-venue.html and AI instructions

--- a/ticket-pdf.html
+++ b/ticket-pdf.html
@@ -306,7 +306,7 @@
                 </div>
                 <div class="ticket-info-item">
                     <p class="ticket-info-label">開催日 / Date</p>
-                    <p class="ticket-info-value">2026年11月◯日（◯）</p>
+                    <p class="ticket-info-value">2026年11月13日（金）</p>
                 </div>
                 <div class="ticket-info-item">
                     <p class="ticket-info-label">会場 / Venue</p>
