--- a/ticket.html
+++ b/ticket.html
@@ -220,6 +220,7 @@
                 <a href="sessions.html" class="hover:text-black transition-colors">セッション</a>
                 <a href="ticket.html" class="text-black font-semibold">チケット</a>
                 <a href="index.html#news" class="hover:text-black transition-colors">お知らせ</a>
+                <a href="date-venue.html" class="hover:text-black transition-colors">日程・会場</a>
                 <a href="mypage.html" class="hover:text-black transition-colors">マイページ</a>
             </div>
             <div class="md:hidden">
@@ -236,7 +237,7 @@
                 チケット
             </h1>
             <p class="text-lg md:text-xl text-gray-500 font-medium max-w-2xl mx-auto leading-relaxed reveal delay-100">
-                会場開催（11/13）とオンデマンド配信を組み合わせた<br>あなたに最適なプランをお選びください。
+                2026年11月13日（金）会場開催<br>＆交流パーティーとオンデマンド配信を組み合わせた<br>あなたに最適なプランをお選びください。
             </p>
         </div>
     </header>
@@ -637,7 +638,7 @@
     <!-- Venue Info Section -->
     <section class="px-6 max-w-4xl mx-auto pb-12">
         <div class="bg-gradient-to-br from-blue-50 to-purple-50 rounded-3xl p-8 md:p-12 reveal">
-            <h2 class="text-2xl font-bold mb-6 text-center">会場構成<span class="text-base font-normal text-gray-500 ml-2">ロイヤルホール横浜</span></h2>
+            <h2 class="text-2xl font-bold mb-2 text-center">会場構成<span class="text-base font-normal text-gray-500 ml-2">2026年11月13日（金）ロイヤルホール横浜</span></h2>
             <div class="grid md:grid-cols-2 gap-6">
                 <!-- 無料エリア -->
                 <div class="bg-white rounded-2xl p-6 border-2 border-green-200">
