--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                 <a href="sessions.html" class="hover:text-black transition-colors">セッション</a>
                 <a href="ticket.html" class="hover:text-black transition-colors">チケット</a>
                 <a href="#news" class="hover:text-black transition-colors">お知らせ</a>
+                <a href="date-venue.html" class="hover:text-black transition-colors">日程・会場</a>
                 <a href="mypage.html" class="hover:text-black transition-colors">マイページ</a>
             </div>
             <div class="md:hidden">
