--- a/mypage.html
+++ b/mypage.html
@@ -156,6 +156,7 @@
                 <a href="sessions.html" class="hover:text-black transition-colors">セッション</a>
                 <a href="ticket.html" class="hover:text-black transition-colors">チケット</a>
                 <a href="index.html#news" class="hover:text-black transition-colors">お知らせ</a>
+                <a href="date-venue.html" class="hover:text-black transition-colors">日程・会場</a>
                 <a href="mypage.html" class="text-black font-semibold">マイページ</a>
             </div>
             <div class="md:hidden">
@@ -273,7 +274,7 @@
                         <div class="grid sm:grid-cols-2 gap-4">
                             <div class="bg-gray-50 rounded-xl p-4">
                                 <p class="text-xs text-gray-400 mb-1">日時</p>
-                                <p class="font-semibold">2026年11月◯日 18:00〜20:00</p>
+                                <p class="font-semibold">2026年11月13日 18:00〜20:00</p>
                             </div>
                             <div class="bg-gray-50 rounded-xl p-4">
                                 <p class="text-xs text-gray-400 mb-1">会場</p>
