詳細版ページを追加、概要版からのリンクを更新

--- a/system-comparison.html
+++ b/system-comparison.html
@@ -305,9 +305,14 @@ sequenceDiagram
     <!-- Footer -->
     <footer class="bg-gray-100 py-8 px-6 text-center text-sm text-gray-500">
         <p>&copy; 2026 JTF翻訳祭 事務局資料</p>
-        <a href="JTF翻訳祭_チケット・配信システム比較検討.md" class="text-blue-600 hover:underline mt-2 inline-block">
-            <i class="fas fa-file-alt mr-1"></i>詳細版（Markdown）を見る
-        </a>
+        <div class="mt-2 space-x-4">
+            <a href="system-comparison-detail.html" class="text-blue-600 hover:underline">
+                <i class="fas fa-file-alt mr-1"></i>詳細版を見る
+            </a>
+            <a href="JTF翻訳祭_チケット・配信システム比較検討.md" class="text-gray-500 hover:underline">
+                Markdown版
+            </a>
+        </div>
     </footer>
 
     <script>
