--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                 <a href="#news" class="hover:text-black transition-colors">お知らせ</a>
                 <a href="date-venue.html" class="hover:text-black transition-colors">日程・会場</a>
                 <a href="mypage.html" class="hover:text-black transition-colors">マイページ</a>
+                <a href="system-comparison.html" class="hover:text-black transition-colors text-blue-600">システム検討</a>
             </div>
             <div class="md:hidden">
                 <button class="text-gray-800"><i class="fas fa-bars"></i></button>
@@ -287,7 +288,7 @@
             </div>
             <div class="flex flex-col md:flex-row justify-between items-start md:items-center py-8 border-b border-gray-100">
                 <span class="text-gray-400 font-medium w-32">会場</span>
-                <span class="text-xl font-bold mt-2 md:mt-0">ロイヤルホール横浜</span>
+                <span class="text-xl font-bold mt-2 md:mt-0">横浜市開港記念会館（ジャックの塔）</span>
             </div>
             <div class="flex flex-col md:flex-row justify-between items-start md:items-center py-8 border-b border-gray-100">
                 <span class="text-gray-400 font-medium w-32">主催</span>
